--- a/Curs4-buton-sageti-tooltip/lucrare-practica-bulina.html
+++ b/Curs4-buton-sageti-tooltip/lucrare-practica-bulina.html
@@ -13,7 +13,7 @@
         position: relative;
     }
 
-    .circle:before{
+    /* .circle:before{
         display: inline-block;
         content: "";
         border-radius: 50%;
@@ -25,7 +25,7 @@
         opacity:1;
         transform: translate(-50%, -50%);
         transition: width .5s, height .5s, opacity .5s;
-    }
+    } */
 
     .circle:after{
         display: inline-block;
@@ -39,14 +39,15 @@
         top: 50%;
         opacity:1;
         transform: translate(-50%, -50%);
-        transition: width .5s, height .5s, opacity .5s; */
+        transition: width .5s, height .5s, opacity .5s; 
     }
+    
      .circle:hover:after {
         display: inline-block;
         width: 25px;
         height: 25px;
         opacity: 1;
-    } */
+    } 
   </style>
 
   <body>
