--- a/Curs4-buton-sageti-tooltip/tooltip1.html
+++ b/Curs4-buton-sageti-tooltip/tooltip1.html
@@ -34,9 +34,9 @@
         left: 50%;
         transform: translateX(-50%);
         white-space: nowrap;
-        /* overflow: hidden; */
+        overflow: hidden;
         text-overflow: ellipsis;
-        text-align: center:
+        text-align: center;
     }
     .tooltip-div:hover:before{
         content: "";
