--- a/test-curs40-evaluare/coloane2.html
+++ b/test-curs40-evaluare/coloane2.html
@@ -102,7 +102,7 @@
         <div class="secondContainer">
 
             <div class="smallContainer">
-                <div class="image"><img src="frezii.jpg"></div>
+                <div class="image"><img src="images/frezii.jpg"></div>
                 <p class="boxTitle">
                     What is your Start-up Idea? Make it Best
                 </p>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="smallContainer">
-                <div class="image"><img src="frezii.jpg"></div>
+                <div class="image"><img src="images/frezii.jpg"></div>
                 <p class="boxTitle">
                     What is your Start-up Idea? Make it Best
                 </p>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="smallContainer">
-                <div class="image"><img src="frezii.jpg"></div>
+                <div class="image"><img src="images/frezii.jpg"></div>
                 <p class="boxTitle">
                     What is your Start-up Idea? Make it Best
                 </p>
