--- a/test-curs40-evaluare/tabel2.html
+++ b/test-curs40-evaluare/tabel2.html
@@ -7,7 +7,7 @@
     <title>Tabel1</title>
     <style>
         body {
-            background-image: url("background.jpg");
+            background-image: url("images/background.jpg");
             background-repeat: repeat;
      }
 
