--- a/test-curs40-evaluare/coloane.html
+++ b/test-curs40-evaluare/coloane.html
@@ -6,23 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .smallContainer {
-            background-color: white;
+        .container{
             position: relative;
-            display: inline-block;
-            width: 300px;
-            height: 300px;
         }
 
+        .title{
+            display: inline-block;
+            line-height: 100px;
+            width: 100%;
+            margin: 0 auto;
+            text-align: center;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 2em;
+            font-weight: bolder;
+        }
+        
+        .loremIpsum{
+            display: block;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 0.8em;
+            color: rgb(192, 186, 186);
+            padding: 0 10%;
+            text-align: center;
+           }
+        .rowContainer {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            padding-bottom: 5%;
+        }
+
+        .smallContainer {
+            position: relative;
+            display: inline-block;
+            width: 30%;
+            height: 300px;          
+            }
+
         .image {
-            width: 50px;
-            height: 50px;
+            width: 75px;
+            height: 75px;
             border-radius: 50%;
             position: absolute;
             margin: 0 auto;
             left: 50%;
             transform: translateX(-50%);
             z-index: -1;
+        }
+        .smallContainer:hover>.description{
+            background-color: lightyellow;
+        }
+        .smallContainer:hover>.image{
+             z-index: 3;
         }
 
         img {
@@ -33,29 +68,96 @@
             width: 100%;
             display: inline-block;
             position: absolute;
-            top: 40px;
+            top: 20%;
             border-radius: 5px;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            z-index:10;
+            background-color: white;
+            padding-top: 5%;
+            text-align: center;
         }
 
+
+
         .line-separator {
-            width: 60%;
+            width: 20%;
             background-color: brown;
             height: 2px;
+            margin: 0 auto;
+        }
+
+        .description>p {
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 0.8em;
+            color: grey;
+            padding: 0 20% 10% 20%
         }
     </style>
 </head>
 
 <body>
-    <div class="smallContainer">
-        <div class="image"><img src="images/vijla.jpg" height="50px" width="50px"></div>
-        <div class="description">
-            <span class="innerTitle">Vizsla Maghiara</span>
-            <div class="line-separator"></div>
-            <p></p>
+    <div class="container">
+        <p>
+            <span class="title">Dog Breads</span>
+            <span class="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+        </p>
+        <div class="rowContainer">
+            <div class="smallContainer">
+                <div class="image"><img src="images/vijla.jpg" height="75px" width="75px"></div>
+                <div class="description">
+                    <span class="innerTitle">Vizsla Maghiara</span><br><br>
+                    <div class="line-separator"></div>
+                    <p>Created in Hungary to work as a pointer and retriever, the Vizsla dog breed has an aristocratic
+                        bearing</p>
+                </div>
+            </div>
+            <div class="smallContainer">
+                <div class="image"><img src="images/vijla.jpg" height="75px" width="75px"></div>
+                <div class="description">
+                    <span class="innerTitle">Vizsla Maghiara</span><br><br>
+                    <div class="line-separator"></div>
+                    <p>Created in Hungary to work as a pointer and retriever, the Vizsla dog breed has an aristocratic
+                        bearing</p>
+                </div>
+            </div>
+            <div class="smallContainer">
+                <div class="image"><img src="images/vijla.jpg" height="75px" width="75px"></div>
+                <div class="description">
+                    <span class="innerTitle">Vizsla Maghiara</span><br><br>
+                    <div class="line-separator"></div>
+                    <p>Created in Hungary to work as a pointer and retriever, the Vizsla dog breed has an aristocratic
+                        bearing</p>
+                </div>
+            </div>
         </div>
-
+        <div class="rowContainer">
+            <div class="smallContainer">
+                <div class="image"><img src="images/vijla.jpg" height="75px" width="75px"></div>
+                <div class="description">
+                    <span class="innerTitle">Vizsla Maghiara</span><br><br>
+                    <div class="line-separator"></div>
+                    <p>Created in Hungary to work as a pointer and retriever, the Vizsla dog breed has an aristocratic
+                        bearing</p>
+                </div>
+            </div>
+            <div class="smallContainer">
+                <div class="image"><img src="images/vijla.jpg" height="75px" width="75px"></div>
+                <div class="description">
+                    <span class="innerTitle">Vizsla Maghiara</span><br><br>
+                    <div class="line-separator"></div>
+                    <p>Created in Hungary to work as a pointer and retriever, the Vizsla dog breed has an aristocratic
+                        bearing</p>
+                </div>
+            </div>
+            <div class="smallContainer">
+                <div class="image"><img src="images/vijla.jpg" height="75px" width="75px"></div>
+                <div class="description">
+                    <span class="innerTitle">Vizsla Maghiara</span><br><br>
+                    <div class="line-separator"></div>
+                    <p>Created in Hungary to work as a pointer and retriever, the Vizsla dog breed has an aristocratic
+                        bearing</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
